--- a/app/src/main/res/layout/activity_add_alarm.xml
+++ b/app/src/main/res/layout/activity_add_alarm.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -23,6 +24,7 @@
 
         <EditText
             android:id="@+id/editText"
+            style="@style/MyEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -41,12 +43,14 @@
             android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="191dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="10dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -60,6 +64,7 @@
 
         <EditText
             android:id="@+id/editText2"
+            style="@style/MyEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -70,6 +75,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="10dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -83,6 +89,7 @@
 
         <EditText
             android:id="@+id/editText4"
+            style="@style/MyEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -99,6 +106,7 @@
 
         <Button
             android:id="@+id/button2"
+            style="@style/RedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -106,6 +114,7 @@
 
         <Button
             android:id="@+id/button"
+            style="@style/OrangeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
